set up webpack.config.js

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "del-cli dist -f",
-    "build": "webpack src/main.js --output dist/bundle.js",
+    "build": "webpack",
     "execute": "node dist/bundle.js",
     "start": "npm run build -s && npm run execute -s"
   },
